[gd_scene load_steps=7 format=3 uid="uid://cl88k5rd3p0mq"]

[ext_resource type="PackedScene" uid="uid://cqxqiyli1htuw" path="res://components/brain/knob.tscn" id="1_aqiuo"]
[ext_resource type="Script" path="res://levels/brain/brain.gd" id="1_l8xtl"]
[ext_resource type="FontFile" uid="uid://cimxxbq7kwgxa" path="res://assets/visual/Magero.ttf" id="2_i476u"]

[sub_resource type="Gradient" id="Gradient_rcn3s"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_n2big"]
gradient = SubResource("Gradient_rcn3s")

[sub_resource type="Theme" id="Theme_55c3b"]
default_font = ExtResource("2_i476u")

[node name="Brain" type="Node2D"]
script = ExtResource("1_l8xtl")

[node name="Canvas" type="Sprite2D" parent="."]
position = Vector2(160, 80)
scale = Vector2(1.25, 160)
texture = SubResource("GradientTexture1D_n2big")

[node name="GoalLine" type="Line2D" parent="."]
position = Vector2(-84, 0)
points = PackedVector2Array(179, 89, 179, 44, 157, 14, 135, 44, 135, 89, 179, 44, 135, 44, 179, 89, 135, 89)
width = 2.0
default_color = Color(0.654902, 0.654902, 0.654902, 1)
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="RobotLine" type="Line2D" parent="."]
position = Vector2(-84, 0)
width = 2.0
default_color = Color(0, 0, 0, 0)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ShowLine" type="Line2D" parent="."]
position = Vector2(-84, 0)
width = 2.0
default_color = Color(1, 0, 0, 0.756863)

[node name="KnobA" parent="." instance=ExtResource("1_aqiuo")]
position = Vector2(52, 124)
rotation = 0.610865

[node name="KnobB" parent="." instance=ExtResource("1_aqiuo")]
position = Vector2(72, 124)
rotation = 1.22173

[node name="KnobC" parent="." instance=ExtResource("1_aqiuo")]
position = Vector2(90, 124)

[node name="KnobD" parent="." instance=ExtResource("1_aqiuo")]
visible = false
position = Vector2(96, 127)
rotation = 2.96706

[node name="LabelA" type="Label" parent="."]
texture_filter = 1
offset_left = 48.0
offset_top = 135.0
offset_right = 58.0
offset_bottom = 149.0
theme = SubResource("Theme_55c3b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "A"

[node name="LabelA2" type="Label" parent="."]
texture_filter = 1
offset_left = 7.0
offset_top = 136.0
offset_right = 55.0
offset_bottom = 150.0
scale = Vector2(0.75, 0.75)
theme = SubResource("Theme_55c3b")
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "11:00"

[node name="LabelB" type="Label" parent="."]
texture_filter = 1
offset_left = 68.0
offset_top = 135.0
offset_right = 78.0
offset_bottom = 149.0
theme = SubResource("Theme_55c3b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "B"

[node name="LabelB2" type="Label" parent="."]
texture_filter = 1
offset_left = 54.0
offset_top = 149.0
offset_right = 102.0
offset_bottom = 163.0
scale = Vector2(0.75, 0.75)
theme = SubResource("Theme_55c3b")
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "12:00"

[node name="LabelC" type="Label" parent="."]
texture_filter = 1
offset_left = 86.0
offset_top = 135.0
offset_right = 96.0
offset_bottom = 149.0
theme = SubResource("Theme_55c3b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "C"

[node name="LabelC2" type="Label" parent="."]
texture_filter = 1
offset_left = 100.0
offset_top = 136.0
offset_right = 148.0
offset_bottom = 150.0
scale = Vector2(0.75, 0.75)
theme = SubResource("Theme_55c3b")
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "11:00"

[node name="LabelD" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 92.0
offset_top = 138.0
offset_right = 102.0
offset_bottom = 152.0
theme = SubResource("Theme_55c3b")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "D"

[connection signal="on_value_change" from="KnobA" to="." method="_on_knob_a_on_value_change"]
[connection signal="on_value_change" from="KnobB" to="." method="_on_knob_b_on_value_change"]
[connection signal="on_value_change" from="KnobC" to="." method="_on_knob_c_on_value_change"]
[connection signal="on_value_change" from="KnobD" to="." method="_on_knob_d_on_value_change"]
